--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 black = "^22.8.0"
-pylint = "^2.15.2"
 isort = "^5.10.1"
+flake8 = "^5.0.4"
 
 
 [build-system]
