--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Linter
+name: Tests
 
 on: [push, pull_request]
 
@@ -46,7 +46,7 @@ jobs:
       #----------------------------------------------
       #              run linters suite
       #----------------------------------------------
-      - name: Run linters
+      - name: Run tests
         run: |
             source .venv/bin/activate
-            flake8 src
+            pytest tests
